# nexus

./: .gitignore  .loop  .own  .raw-ref  .readme-rules.json  .roadmap  .shared  CLAUDE.md  Cargo.toml  GROWTH.md  README.md  dashboard.html  install.hexa  lb_state.json  loop-rules.json  nexus.hexa  project.hexa  run.hexa  run.sh
.claude/: settings.json
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS
.hexa-init/: stamp
cli/: run.hexa
config/: absolute_rules.json  alm_corpus_gate_config.json  alm_r13_fellows_bt_mapping.json  calculators.json  commands.json  core-lockdown.json  core.json  drill.json  hetzner.json  installed_tools.json  lens_registry.json  n6_segment.json  n6_segment_loader.hexa  nexus-projects.json  permissions_ssot.json  projects.json  readme_rules.json  revive.json  ubuntu.json  ubuntu2.json
consciousness/: consciousness_laws.json
convergence/: anima.json  drill_stability.convergence  hexa_lang_apr22_upgrades.convergence  pixie_discord_translator.convergence
data/: materials-db.json
design/: 3pillar_obstruction_localization.md  abstraction_ceiling.md  beyond_omega_HONEST_INDEX.md  beyond_omega_epsilon_zero_boundary.md  beyond_omega_ladder.md  beyond_omega_mahlo_large_cardinal.md  beyond_omega_measurable_zero_sharp.md  beyond_omega_omega_one_uncountability.md  engine_daemon_design.md  honesty_triad.md  method_gap_pattern.md  next_session_handoff.md  progressive_deepening_methodology.md  witness_dashboard.md  witness_registry.tsv
discovery/: _rmap_expand_helper.hexa  atlas_hypothesis_resolution_2026-04-14.json  atlas_shard_study.md  (+9 more)
(+2757 files in other folders)
