[package]
name = "nexus6"
version = "0.1.0"
edition = "2021"
description = "NEXUS-6 Discovery Engine — 130+ lenses, OUROBOROS evolution, n=6 constant matching"
authors = ["need-singularity"]
license = "MIT"
repository = "https://github.com/need-singularity/nexus6"
keywords = ["discovery", "telescope", "n6", "perfect-number", "lens"]
categories = ["science", "mathematics"]

[lib]
name = "nexus6"
crate-type = ["lib", "cdylib"]
# cdylib = Python 모듈 (.so/.dylib) 생성 필수
# maturin build --release --features python

[[bin]]
name = "nexus6"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }

[features]
default = []
python = ["pyo3", "numpy"]

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
